update minor changes to tests & README

--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
             </plugin>
 
             <!-- maven shade plugin to bundle the jdbc driver -->
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.4.3</version>
@@ -151,7 +151,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin-->
 
             <!-- disable surefire -->
             <plugin>
